Добавлены новые параметры для настроек соревнования