@@ -1,13 +1,11 @@
 package ru.hits.attackdefenceplatform.configuration;
 
-import io.jsonwebtoken.ExpiredJwtException;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import lombok.NonNull;
 import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
@@ -18,10 +16,8 @@ import ru.hits.attackdefenceplatform.core.user.repository.UserRepository;
 import ru.hits.attackdefenceplatform.util.JwtTokenUtils;
 
 import java.io.IOException;
-import java.util.Collections;
 import java.util.List;
 
-@Slf4j
 @RequiredArgsConstructor
 public class JwtRequestFilter extends OncePerRequestFilter {
     private final JwtTokenUtils jwtTokenUtils;
@@ -33,21 +29,19 @@ public class JwtRequestFilter extends OncePerRequestFilter {
             @NonNull HttpServletResponse response,
             @NonNull FilterChain filterChain
     ) throws ServletException, IOException {
-        var jwt = extractJwtFromRequest(request);
-        if (jwt != null) {
-            try {
+        try {
+            String jwt = extractJwtFromRequest(request);
+            if (jwt != null) {
                 authenticateUser(jwt);
-            } catch (ExpiredJwtException e) {
-                log.debug("Token is expired");
-            } catch (Exception e) {
-                log.error("Error processing JWT", e);
             }
+        } catch (Exception ignored) {
         }
+
         filterChain.doFilter(request, response);
     }
 
     private String extractJwtFromRequest(HttpServletRequest request) {
-        var authHeader = request.getHeader("Authorization");
+        String authHeader = request.getHeader("Authorization");
         if (authHeader != null && authHeader.startsWith("Bearer ")) {
             return authHeader.substring(7);
         }
@@ -57,18 +51,20 @@ public class JwtRequestFilter extends OncePerRequestFilter {
     private void authenticateUser(String jwt) {
         var userId = jwtTokenUtils.getUserIdFromToken(jwt);
         if (userId != null && SecurityContextHolder.getContext().getAuthentication() == null) {
-            userRepository.findById(userId).ifPresent(user -> setAuthentication(user, jwt));
+            userRepository.findById(userId)
+                    .ifPresent(user -> setAuthentication(user, jwt));
         }
     }
 
     private void setAuthentication(UserEntity user, String jwt) {
-        List<GrantedAuthority> authorities = Collections.singletonList(
+        List<GrantedAuthority> authorities = List.of(
                 new SimpleGrantedAuthority("ROLE_" + user.getRole().name())
         );
-        var token = new UsernamePasswordAuthenticationToken(
+        UsernamePasswordAuthenticationToken authenticationToken = new UsernamePasswordAuthenticationToken(
                 user, jwt, authorities
         );
-        SecurityContextHolder.getContext().setAuthentication(token);
+        SecurityContextHolder.getContext().setAuthentication(authenticationToken);
     }
 }
+
 
